# sketch-stl

./: CMakeLists.txt  LICENSE  README.md
include/: sketch_iterator.h  sketch_string.h  sketch_vector.h  string.h
src/: CMakeLists.txt  sketch_string.cpp  string.cpp
tests/: CMakeLists.txt  String.cpp  Vector.cpp
